Added info to atthefair and fixed modal images on map

--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -39,6 +39,7 @@
     background: white; //rgba(255, 255, 255, 0.9);
 }
 .cross {
+    position: fixed;
     display: inline;
     z-index: 1000;
     margin: 0.4em 0.4em 0em 0.4em;
@@ -75,6 +76,7 @@
     }
     .modal-flex-1 {
         position: relative;
+        padding-top: 5%;
         width: 35%;
         text-align: center;
         display: flex;
@@ -83,8 +85,8 @@
         .modalimage-exhib {
             min-width: 80px;
             min-height: 80px;
-            max-width: 70%;
-            max-height: 70%;
+            max-width: 50%;
+            max-height: 50%;
             display: block;
             margin-left: auto;
             margin-right: auto;
@@ -274,17 +276,26 @@ a:hover {
             flex-direction: row;
             position: relative;
             width: 100%;
-            margin-top: 5%;
+            margin-top: 2%;
             text-align: center;
+            padding-top: 0;
             .modalimage-exhib {
-                width: 50%;
-                display: block;
+                display: flex;
+                align-items: center;
                 margin-left: auto;
                 margin-right: auto;
+                text-align: center;
+                img {
+                    //width: 50%;
+                    min-width: 80px;
+                    max-width: 150px;
+                    max-height: 150px;
+                }
             }
             .modal-title {
-                width: 70%;
-
+                text-align: center;
+                width: 100%;
+                margin-top: 4%;
                 display: block;
                 margin-left: auto;
                 margin-right: auto;
