--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -83,13 +83,18 @@
         flex-wrap: wrap;
         flex-direction: column;
         .modalimage-exhib {
-            min-width: 80px;
-            min-height: 80px;
-            max-width: 50%;
-            max-height: 50%;
-            display: block;
+            display: flex;
             margin-left: auto;
             margin-right: auto;
+            justify-content: center;
+            img {
+                height: 100%;
+                width: 100%;
+                min-width: 80px;
+                min-height: 80px;
+                max-width: 200px;
+                max-height: 200px;
+            }
         }
         .modal-title {
             margin-top: 10%;
