--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -16,7 +16,6 @@
     align-items: center;
     font-size: 22px;
     cursor: pointer;
-
     rotate: 180deg;
 }
 #expand-button:hover {
@@ -96,9 +95,8 @@
     top: 60%;
     left: 0%;
     width: 100%;
-    padding-top: 0.2em;
     height: 40vh;
-    overflow-y: auto;
+    //overflow-y: auto;
     background-color: white;
     box-sizing: border-box;
     z-index: 1000;
@@ -172,6 +170,7 @@
 
 .search {
     padding-bottom: 1em;
+    padding-top: 1em;
     z-index: 10;
 }
 
@@ -724,7 +723,8 @@
 
 .arrow-container {
     width: 100%;
-    padding-bottom: 1em;
+    padding: 0.5rem;
+    border-bottom: 1px solid #ccc;
 }
 
 .arrow-container * {
@@ -741,4 +741,9 @@
 .arrow-container div svg {
     height: 30px;
     width: 30px;
+}
+
+.scrollable {
+    overflow-y: auto;
+    height: 100%;
 }
