show recommended exhibitors

--- a/src/components/Questionnaire/index.scss
+++ b/src/components/Questionnaire/index.scss
@@ -40,8 +40,8 @@
     margin: 10px 0;
     width: 100%;
     /* column-count: 2; 
-    column-gap: 20px; 
-} */
+    column-gap: 20px; */
+}
 
 .dropdown-button {
     width: 100%;
