Fixed css issue on recommended exhibs

--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -312,6 +312,8 @@
             display: flex;
             flex-direction: row;
             padding: 0em 1em 3em 1em;
+            flex-wrap: wrap;
+            justify-content: center;
         }
     }
     .all-exhibitors {
