fixed close on questionnaire

--- a/src/components/Questionnaire/index.scss
+++ b/src/components/Questionnaire/index.scss
@@ -1,3 +1,13 @@
+.crossQuestionnaire {
+    width: 10%;
+    height: 10%;
+    min-width: 28px;
+    min-height: 28px;
+    margin: 0;
+    top: 3%;
+    left: 0;
+}
+
 .questionnaire-container {
     position: relative;
     top: 50%;
