Fixed popup css bug

--- a/src/components/Modal/index.scss
+++ b/src/components/Modal/index.scss
@@ -264,6 +264,7 @@ a:hover {
     .popup {
         width: 100vw;
         overflow-y: scroll;
+        min-height: 100%;
     }
     .modalcontent {
         .modal-container {
