--- a/src/components/Questionnaire/index.scss
+++ b/src/components/Questionnaire/index.scss
@@ -28,6 +28,12 @@
     //padding: 10%;
 }
 
+#mobile {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
 .button-open-questionnaire {
     position: fixed;
     bottom: 10px;
