Fixed buttons overlaying wrong

--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -327,7 +327,7 @@
             width: 100%;
             display: flex;
             flex-direction: row;
-            padding: 0em 1em 0.5em 1em;
+            padding: 0em 10% 0.5em 10%;
             flex-wrap: wrap;
             justify-content: center;
         }
@@ -348,7 +348,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             justify-content: center;
-            padding: 0em 1em 3em 1em;
+            padding: 0em 10% 3em 10%;
         }
     }
 }
