fixed style on logo container to work with firefox

--- a/src/components/Jumbotron/index.scss
+++ b/src/components/Jumbotron/index.scss
@@ -136,6 +136,7 @@
     #logo-container-img {
         align-self: flex-start;
     }
+    margin-left: min(20vw, 160px);
 }
 
 @media screen and (min-width: $breakpoint-ipad) {
