--- a/src/components/PartnerLogosLocal/index.scss
+++ b/src/components/PartnerLogosLocal/index.scss
@@ -55,4 +55,9 @@
         max-width: 100% !important;
         width: 80% !important;
     }
+    #DHL {
+        max-width: 40% !important;
+        min-width: 250px;
+        width: 80% !important;
+    }
 }
