Minor interaction tweaks on map

--- a/src/components/ExhibitorList/index.scss
+++ b/src/components/ExhibitorList/index.scss
@@ -1,6 +1,10 @@
 @import '../../styles/_variables';
 @import '../../styles/_fonts';
 
+.recomText:hover {
+    cursor: pointer;
+}
+
 #filter-button {
     display: flex;
     align-items: center;
