--- a/src/components/Navbar/index.scss
+++ b/src/components/Navbar/index.scss
@@ -2,7 +2,8 @@
 @import '../../styles/_fonts';
 .banner {
     //margin-top: 56px;
-    display: inline;
+    //display: inline;
+
     font-size: 1.2em;
     font-family: Oswald, sans-serif;
     letter-spacing: 1.4px;
