--- a/src/components/Banner/index.scss
+++ b/src/components/Banner/index.scss
@@ -8,6 +8,9 @@
     font-size: 1.2em;
     padding-top: 8px;
     padding-bottom: 8px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 
     &:hover {
         text-decoration: underline;
