--- a/src/components/RecruitmentPitch/index.scss
+++ b/src/components/RecruitmentPitch/index.scss
@@ -31,14 +31,17 @@
     .pitchContainer {
         display: flex;
         flex-direction: row;
+        justify-content: center;
 
         .pitcher {
             display: inline-block;
             margin: 1vw 2vw 1vw 0vw;
             text-align: center;
+            width: 150px;
+            height: 150px;
             .pitcher-image {
-                width: 100px;
-                height: 100px;
+                width: 100%;
+                height: 100%;
                 border-radius: 100px;
             }
             .pitcherText {
@@ -47,6 +50,8 @@
                 margin-left: 1vw;
                 p {
                     text-align: center;
+                    margin-top: 0;
+                    margin-bottom: 4px;
                     color: $melon;
                 }
             }
