--- a/src/components/Countdown/index.scss
+++ b/src/components/Countdown/index.scss
@@ -15,7 +15,7 @@
         .countdown-numbers {
             color: #fff;
             //font-weight: bold;
-            font-size: 7vmin;
+            font-size: 40px;
             text-align: left;
             margin-top: 5px;
         }
