Changed home text

--- a/src/layouts/Homepage/index.scss
+++ b/src/layouts/Homepage/index.scss
@@ -31,6 +31,7 @@
         letter-spacing: 0.528px;
         text-transform: uppercase;
         text-align: center;
+        margin-bottom: 0px;
         margin-block-start: 0.2em;
     }
     #subheader {
