--- a/src/layouts/ForCompanies/index.scss
+++ b/src/layouts/ForCompanies/index.scss
@@ -36,6 +36,51 @@
     background-image: url('/assets/images/header-images/competition.jpg');
 }
 
+.until2024 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100%;
+    margin-bottom: 30px;
+    border: 3px dotted $melon;
+
+    #main2024 {
+        display: flex;
+        div {
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            width: 100%;
+        }
+    }
+    h1 {
+        align-self: flex-start;
+    }
+    a {
+        width: 100%;
+        text-align: center;
+        button {
+            width: 50%;
+        }
+    }
+    #img2 {
+        width: 30%;
+        align-self: center;
+        rotate: 20deg;
+        margin-left: 1em;
+    }
+    #img3 {
+        width: 30%;
+        rotate: -10deg;
+        margin-top: 40px;
+    }
+
+    h4 {
+        padding: 10px;
+        height: 50%;
+    }
+}
+
 .diversitypage-container {
     padding: 0;
 }
@@ -45,7 +90,7 @@
 }
 
 .info-container {
-    padding: 3em 0em;
+    padding: 1em 0em;
     position: unset;
     top: unset;
     display: block;
